sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:22: error: '(' expected but identifier found.
  if col==cBase{
     ^